<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TableRow
            android:id="@+id/rowIcone"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginTop="20sp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="wrap_content"
                android:layout_height="189dp"
                android:scrollbarSize="4sp"
                app:srcCompat="@mipmap/ic_launcher_foreground" />
        </TableRow>

        <TableRow
            android:id="@+id/rowTitulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/carter_one"
                android:gravity="center"
                android:text="@string/conversao"
                android:textColor="@color/colorTitulo"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowValor"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/carter_one"
                android:gravity="center"
                android:text="@string/valor"
                android:textColor="@color/colorTitulo"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/txtValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:id="@+id/rowDe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp">

            <TextView
                android:id="@+id/lblDe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/carter_one"
                android:gravity="center"
                android:text="@string/de"
                android:textColor="@color/colorTitulo"
                android:textSize="26sp" />

            <Spinner
                android:id="@+id/cbSiglasDe"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:id="@+id/rowPara"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp">

            <TextView
                android:id="@+id/lblPara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/carter_one"
                android:gravity="center"
                android:text="@string/para"
                android:textColor="@color/colorTitulo"
                android:textSize="26sp" />

            <Spinner
                android:id="@+id/cbSiglasPara"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:id="@+id/rowBotao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:background="@color/cardview_light_background">

            <ImageButton
                android:id="@+id/btnConverter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/cardview_light_background"
                app:srcCompat="@mipmap/ic_botao_converter_foreground" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
