<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/rowIcone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80sp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/icone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher_foreground" />
            </TableRow>

            <TableRow
                android:id="@+id/rowResultado"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblAprenda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/carter_one"
                    android:gravity="center"
                    android:text="@string/resultado"
                    android:textColor="@color/colorTitulo"
                    android:textSize="36sp" />
            </TableRow>

            <TableRow
                android:id="@+id/rowValor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25sp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/lblValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/carter_one"
                    android:gravity="center"
                    android:textColor="@color/colorTitulo"
                    android:textSize="32sp" />
            </TableRow>

            <TableRow
                android:id="@+id/rowNovamente"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="25sp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnNovamente"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="0.7"
                    android:height="70sp"
                    android:background="#2196F3"
                    android:drawableBottom="@android:drawable/ic_popup_sync"
                    android:gravity="center"
                    android:onClick="onClickNovamente"
                    android:text="@string/novamente" />
            </TableRow>

            <TableRow
                android:id="@+id/rowCompartilhar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp">

                <Button
                    android:id="@+id/btnCompartilhar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="0.3"
                    android:height="70sp"
                    android:background="#2196F3"
                    android:drawableBottom="@android:drawable/ic_menu_share"
                    android:gravity="center"
                    android:onClick="onClickCompartilharResultado"
                    android:text="@string/compartilhar" />
            </TableRow>

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
